<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LessonDetailActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_lesson_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_title_numbered"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#F16F64"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courses_length"
            android:textSize="20sp"
            android:textColor="#494949"
            />
        <TextView
            android:id="@+id/tv_lesson_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_length_value"
            android:textSize="20sp"
            android:textColor="#494949"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_lesson_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_desc"
        android:textSize="18sp"
        android:textColor="#494949"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="25dp"
        />

    <Button
        android:id="@+id/btn_watch_lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watch_lesson"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:paddingHorizontal="50dp"
        android:paddingVertical="5dp"
        android:background="@drawable/button_background"
        app:backgroundTint="@null"
        android:layout_marginBottom="20dp"
        />

    <WebView
        android:id="@+id/wv_video_player"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="8dp"
        android:visibility="gone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_notes"
        android:textSize="20sp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="5dp"
        />

    <EditText
        android:id="@+id/edt_notes"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:inputType="textMultiLine"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/type_your_notes_here"
        android:gravity="top"
        android:backgroundTint="#494949"
        android:textCursorDrawable="@drawable/edittext_cursor"
        />

    <TextView
        android:id="@+id/tv_notes_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="error"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="5dp"
        android:textColor="#F22716"
        android:textSize="15sp"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/btn_save_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_notes"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#F16F64"
        android:layout_gravity="right"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="40dp"
        />

    <Button
        android:id="@+id/btn_mark_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_mark_complete"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:paddingHorizontal="50dp"
        android:paddingVertical="5dp"
        android:background="@drawable/button_background"
        app:backgroundTint="@null"
        />

</LinearLayout>